# cookiecutter-python

./: .gitignore  CHANGELOG.md  LICENSE  README.md  cookiecutter.json
{{ cookiecutter.project_slug }}/: .pre-commit-config.yaml  README.md  mypy.ini  pyproject.toml
{{ cookiecutter.project_slug }}/docker/: Dockerfile
{{ cookiecutter.project_slug }}/{{ cookiecutter.service_name }}/: errors.py  log.py  main.py  settings.py
